--- a/src/TODO
+++ b/src/TODO
@@ -1,6 +1,56 @@
-- write a shellscript to automate tasks like swapping out /www and packaging modified code for git merging
+# TODO
 - finish postinst and prerm/postrm scripts
+  - preliminary test with postinst does not seem to work (i.e. touch a file in the device root does not result in a file being there)
+- add more config options to package; candidates:
+  reconf.WWW_RENAME_NAME, wifihelper.{AP_ADDRESS, AP_NETMASK, (NET)}
+  about bridging this to lua: have some Makefile stage create a ini/lua file with k/v's and have lua read out that file?
+- write a shellscript to automate tasks like swapping out /www and packaging modified code for git merging
 - do things right and copy (not link) the init script to init.d
   (and enable it automatically, which links to it from rc.d with the proper start priority?)
+- add dependency on either wr703n or mr3020 (and probably comment it out to avoid being to conservative...)
 - add/link general OpenWrt build instructions for OSX to installation page on wiki.
 - see if updating works when a new version is 'released' (probably needs a real feed)
+
+
+# TODO for autowifi.js
+- escape text where necessary (e.g. in getKnown, '<unknown SSID>' is currently interpreted as html...)
+- why is $.trim() required in string comparison? do we need to strip newlines in the parse functions?
+- add hidden field in html to remember encryption (so we know whether or not a passphrase should be entered)
+- instead of showing alerts on missing ssid/phrase in connect, disable the button until contraints have been satisfied
+  (this is also cleaner in case no networks are present)
+- use json for communication?
+
+
+# Logos
+
+Check http://geon.github.io/Programming/2012/04/25/ascii-art-signatures-in-the-wild/ for inspiration
+
+
+  D o o d l e 3 D
+ --------      ____     .---  v 1.0.1
+|  |  |  | __ |  __|.--.| ._| .---..-.-.
+|  |  |  ||--||  _| |--||  . || . |\   /
+|________||__||__|  |__||____||___|/_._\
+
+
+  D o o d l e 3 D
+ --------     ____   .----  v 1.0.1
+|  |  |  |--.|  __|-.|  ._|---.-.-.
+|  |  |  |--||  _|--||  . | . |_ _/
+|________|__||__||__||____|___|_._\
+
+
+....D o o d l e 3 D
+...________     _____  _____  v 1.0.1 
+../  /  /  |__ /  __/ /  - /___ __
+./  '  '  /--//  _|-//  - | . /- /
+/________/__//__/__//____/___/_-_\
+
+
+
+# Shelled bugs/annoyances
++ scripts are only allowed to be created in src folder? (nothing else shown, root greys out 'Finish')
++ text inside heredoc is highlighted
++ only one space allowed at start of line...makes it impossible to draw ascii art
+  plus: I think it breaks my spaces/tabs occasionally but that could have been something else
+- errors after creating new script file (mentioning lua...maybe a conflict?)
