--- a/TODO
+++ b/TODO
@@ -1,9 +1,13 @@
 # TODO
+- licensing (also for hardware and firmware) + credits
+  http://www.codinghorror.com/blog/2007/04/pick-a-license-any-license.html
 - add more config options to package; candidates:
   reconf.WWW_RENAME_NAME, wifihelper.{AP_ADDRESS, AP_NETMASK, (NET)}
   about bridging this to lua: have some Makefile stage create a ini/lua file with k/v's and have lua read out that file?
+  https://github.com/2ion/ini.lua
 - write a shellscript to automate tasks like swapping out /www and packaging modified code for git merging
 - see if updating works when a new version is 'released' (probably needs a real feed)
+- perhaps opkg+safeboot could be useful in the update mechanism?
 - add aliases to root profile only when debugging was requested in menuconfig
 - add config option to compile sources using luac?
 - add dependency on either wr703n or mr3020 (and probably comment it out to avoid being to conservative...)
